<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical" >

    
    
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/button_save" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/button_delete" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/linearLayout1" >
        
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	        
			<TextView
		        android:id="@+id/textView1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/lbl_name" />
		
		    <EditText
		        android:id="@+id/txtSiteName"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/lbl_site_name" >
		
		        <requestFocus />
		    </EditText>
		
		    <TextView
		        android:id="@+id/textView2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/lbl_url" />
		
		    <EditText
		        android:id="@+id/txtSiteURL"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:hint="@string/lbl_site_url" />

		    <TextView
		        android:id="@+id/lblDownloadFolder"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/lbl_download_folder" />

		    <EditText
		        android:id="@+id/txtDownloadFolder"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/txt_download_folder_hint" />

		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" >

		        <CheckBox
		            android:id="@+id/chkScrapeLinks"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_weight="0.50"
		            android:text="@string/chk_scape_links"
		            android:checked="true"
		        />

		        <CheckBox
		            android:id="@+id/chkScrapeImages"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_weight="0.50"
		            android:text="@string/chk_scrape_images"
		            android:checked="true"
		        />

		    </LinearLayout>
		
		    <TextView
		        android:id="@+id/textView3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/lbl_what_to_download"
		        android:textAllCaps="false" />

		    <Spinner
		        android:id="@+id/spnWhatToDownload"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:entries="@array/download_filters" />
		
		    <EditText
		        android:id="@+id/txtWhatToDownload"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:hint="@string/txt_download_regex_hint"
		        android:inputType="text" />
	        
	    </LinearLayout>
    </ScrollView>
    

</RelativeLayout>
