<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/lblItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/lbl_download_item"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/lblItemDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/lbl_item_descr"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lblItemURL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/lbl_item_url"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lblItemFolderDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
	        android:ellipsize="end"
	        android:maxLines="1"
            android:text="@string/lbl_item_folder_description" />

        <TextView
            android:id="@+id/lblItemFolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
	        android:ellipsize="end"
	        android:maxLines="1"
            android:text="@string/lbl_item_folder" />

    </LinearLayout>

</LinearLayout>