<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/site_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/site_item_site_name_default"
        android:textAppearance="?android:attr/textAppearanceLarge" />

<TextView
        android:id="@+id/site_statistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/site_item_site_statistics_default"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/site_url"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="visible" />

</LinearLayout>